--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,9 +28,10 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.1
+  # import pacakges for geolocator, google map, and Flutter Toast ( [optional] just for display your location)
   geolocator: ^5.3.1
-  fluttertoast: ^7.1.6
   google_maps_flutter: ^0.4.0
+  fluttertoast: ^7.1.6
 
 dev_dependencies:
   flutter_test:
